--- a/home.html
+++ b/home.html
@@ -6,7 +6,7 @@
 	<meta charset="UTF-8">
 	<meta name="format-detection" content="telephone=no">
 	<!-- <style>body{opacity: 0;}</style> -->
-	<link rel="stylesheet" href="css/style.min.css?_v=20230502223533">
+	<link rel="stylesheet" href="css/style.min.css?_v=20230503085809">
 	<link rel="shortcut icon" href="favicon.ico">
 	<meta name="robots" content="noindex, nofollow">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -38,7 +38,7 @@
 
 					<nav class="betnero_menu__body">
 						<div data-da=".betnero_header__mobile-line, 992, 3" class="betnero_menu__search">
-							<form id="betnero_headerSearch" action="" method="GET">
+							<form id="betnero_headerSearch" action="#" method="GET">
 								<button type="submit" class="betnero_search-button"><img src="img/icons/search.svg" alt="search"></button>
 								<input type="text" name="search" data-error="" placeholder="Search" class="input">
 							</form>
@@ -151,14 +151,14 @@
 
 
 			<!-- SECTION top-line -->
-			<section class="betnero_top-line">
+			<div class="betnero_top-line">
 				<div class="betnero_top-line__container">
 					<img src="img/banners/eighteen.svg" alt="18">
 					<span class="betnero_top-line__text">Il gioco è vietato ai minori di anni 18. Giocare troppo può causare
 						dipendenza patologica.Probabilità di vincita</span>
 					<img src="img/banners/ezgif.svg" alt="ADM">
 				</div>
-			</section>
+			</div>
 			<!-- End of SECTION top-line -->
 
 
@@ -178,10 +178,10 @@
 										<div class="betnero_promotions__content">
 											<div class="betnero_promotions__description">BONUS BENVENUTO</div>
 											<h1 class="betnero_promotions__title">
-												<div class="betnero_promotions__first-line">FINO A </div>
-												<div class="betnero_promotions__second-line"><span class="betnero_euro">€</span><span class="betnero_numbers">1300</span><span class="betnero_plus">+</span></div>
-												<div class="betnero_promotions__thirt-line"><span class="betnero_euro">€</span>10
-													GRATIS</div>
+												<span class="betnero_promotions__first-line">FINO A </span>
+												<span class="betnero_promotions__second-line"><span class="betnero_euro">€</span><span class="betnero_numbers">1300</span><span class="betnero_plus">+</span></span>
+												<span class="betnero_promotions__thirt-line"><span class="betnero_euro">€</span>10
+													GRATIS</span>
 											</h1>
 											<a href="" class="betnero_promotions__button-registrati">REGISTRATI</a>
 										</div>
@@ -727,7 +727,7 @@
 			</div>
 		</footer>
 	</div>
-	<script src="js/app.min.js?_v=20230502223533"></script>
+	<script src="js/app.min.js?_v=20230503085809"></script>
 </body>
 
 </html>
