--- a/home.html
+++ b/home.html
@@ -6,7 +6,7 @@
 	<meta charset="UTF-8">
 	<meta name="format-detection" content="telephone=no">
 	<!-- <style>body{opacity: 0;}</style> -->
-	<link rel="stylesheet" href="css/style.min.css?_v=20230503085809">
+	<link rel="stylesheet" href="css/style.min.css?_v=20230503212004">
 	<link rel="shortcut icon" href="favicon.ico">
 	<meta name="robots" content="noindex, nofollow">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -434,7 +434,7 @@
 							tutti italiani!
 						</div>
 
-						<div data-watch-threshold="0.2" data-watch class="betnero_provider__banners betnero_move__strings">
+						<div data-watch-threshold="0.5" data-watch class="betnero_provider__banners betnero_move__strings">
 							<div class="betnero_provider__image-ibg">
 								<img src="img/banners/bg-banners.png" alt="bg">
 							</div>
@@ -639,39 +639,39 @@
 							</div>
 							<div class="spollers__item">
 								<button type="button" data-spoller class="spollers__title">Come posso registrarmi sul vostro sito ?</button>
-								<div class="spollers__body">Dovrebbe esserci del testo qui</div>
+								<div class="spollers__body">Dovrebbe esserci del testo qui. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nobis maxime voluptatibus sequi quisquam delectus iste eaque! Provident dolores, dolore officiis corporis tempora delectus consequatur accusamus, temporibus, itaque facilis at eius.</div>
 							</div>
 							<div class="spollers__item">
 								<button type="button" data-spoller class="spollers__title">È sicuro giocare su Betnero.it?</button>
-								<div class="spollers__body">Dovrebbe esserci del testo qui</div>
+								<div class="spollers__body">Dovrebbe esserci del testo qui. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nobis maxime voluptatibus sequi quisquam delectus iste eaque! Provident dolores, dolore officiis corporis tempora delectus consequatur accusamus, temporibus, itaque facilis at eius.</div>
 							</div>
 							<div class="spollers__item">
 								<button type="button" data-spoller class="spollers__title">Quali sono le offerte più convenienti
 									del casino online Betnero ?</button>
-								<div class="spollers__body">Dovrebbe esserci del testo qui. There should be text here.</div>
+								<div class="spollers__body">Dovrebbe esserci del testo qui. There should be text here. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nobis maxime voluptatibus sequi quisquam delectus iste eaque! Provident dolores, dolore officiis corporis tempora delectus consequatur accusamus, temporibus, itaque facilis at eius.</div>
 							</div>
 							<div class="spollers__item">
 								<button type="button" data-spoller class="spollers__title">Come posso giocare nel vostro casino
 									online dal mio smartphone ?</button>
-								<div class="spollers__body">Dovrebbe esserci del testo qui. There should be text here.</div>
+								<div class="spollers__body">Dovrebbe esserci del testo qui. There should be text here. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nobis maxime voluptatibus sequi quisquam delectus iste eaque! Provident dolores, dolore officiis corporis tempora delectus consequatur accusamus, temporibus, itaque facilis at eius.</div>
 							</div>
 							<div class="spollers__item">
 								<button type="button" data-spoller class="spollers__title">Come riconoscere un casinò online legale ?</button>
-								<div class="spollers__body">Dovrebbe esserci del testo qui. There should be text here.</div>
+								<div class="spollers__body">Dovrebbe esserci del testo qui. There should be text here. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nobis maxime voluptatibus sequi quisquam delectus iste eaque! Provident dolores, dolore officiis corporis tempora delectus consequatur accusamus, temporibus, itaque facilis at eius.</div>
 							</div>
 							<div class="spollers__item">
 								<button type="button" data-spoller class="spollers__title">Quali sono i Nuovi Casino Online
 									2023 dove Giocare in Italia?</button>
-								<div class="spollers__body">Dovrebbe esserci del testo qui. There should be text here.</div>
+								<div class="spollers__body">Dovrebbe esserci del testo qui. There should be text here. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nobis maxime voluptatibus sequi quisquam delectus iste eaque! Provident dolores, dolore officiis corporis tempora delectus consequatur accusamus, temporibus, itaque facilis at eius.</div>
 							</div>
 							<div class="spollers__item">
 								<button type="button" data-spoller class="spollers__title">Quali sono i Nuovi Casino Online
 									2023 dove Giocare in Italia?</button>
-								<div class="spollers__body">Dovrebbe esserci del testo qui. There should be text here.</div>
+								<div class="spollers__body">Dovrebbe esserci del testo qui. There should be text here. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nobis maxime voluptatibus sequi quisquam delectus iste eaque!</div>
 							</div>
 							<div class="spollers__item">
 								<button type="button" data-spoller class="spollers__title">Quali sono i sistemi di sicurezza dei casinò?</button>
-								<div class="spollers__body">Dovrebbe esserci del testo qui. There should be text here.</div>
+								<div class="spollers__body">Dovrebbe esserci del testo qui. There should be text here. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nobis maxime voluptatibus sequi quisquam delectus iste eaque! Provident dolores, dolore officiis corporis tempora delectus consequatur accusamus, temporibus, itaque facilis at eius.</div>
 							</div>
 						</div>
 						<!-- Spoilers end -->
@@ -726,8 +726,26 @@
 
 			</div>
 		</footer>
+
+		<div class="responsive-block">
+			<a href="">
+				<img src="img/icons/ball.svg" alt="ball">
+			</a>
+			<a href="">
+				<img src="img/icons/casino.svg" alt="casino">
+			</a>
+			<a href="">
+				<img src="img/icons/live-casino.svg" alt="live">
+			</a>
+			<a href="">
+				<img src="img/icons/slot-machine.svg" alt="slot">
+			</a>
+
+			<button type="button" class="betnero_icon-menu"><span></span></button>
+
+		</div>
 	</div>
-	<script src="js/app.min.js?_v=20230503085809"></script>
+	<script src="js/app.min.js?_v=20230503212004"></script>
 </body>
 
 </html>
