--- a/home-logged.html
+++ b/home-logged.html
@@ -2,7 +2,7 @@
 <html lang="it">
 
 <head>
-	<title>HomePage</title>
+	<title>Home Page logged in </title>
 	<meta charset="UTF-8">
 	<meta name="format-detection" content="telephone=no">
 	<!-- <style>body{opacity: 0;}</style> -->
@@ -29,7 +29,7 @@
 
 				<a href="" class="betnero_header__logo betnero_header__logo-pc"><img src="img/logo.svg" alt="logo"></a>
 
-				<div class="betnero_header__buttons">
+				<div class="betnero_header__buttons betnero_logged-in">
 					<a href="" class="betnero_header__button-login">LOGIN</a>
 					<a href="" class="betnero_header__button-reg">REGISTRATI</a>
 				</div>
