--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 		<h2>Ready pages:</h2>
 		<ul class="rootpage__list">
 			<li><a target="_blank" href="home.html">Home</a></li>
+			<li><a target="_blank" href="home-logged.html">Home logged in</a></li>
 		</ul>
 	</div>
 </body>
