--- a/home.html
+++ b/home.html
@@ -6,8 +6,8 @@
 	<meta charset="UTF-8">
 	<meta name="format-detection" content="telephone=no">
 	<!-- <style>body{opacity: 0;}</style> -->
-	<!-- <link rel="stylesheet" href="css/style.min.css?_v=20230505005410"> -->
-	<link rel="stylesheet" href="css/style.css?_v=20230505005410">
+	<!-- <link rel="stylesheet" href="css/style.min.css?_v=20230505033835"> -->
+	<link rel="stylesheet" href="css/style.css?_v=20230505033835">
 	<meta name="robots" content="noindex, nofollow">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
@@ -18,6 +18,9 @@
 			<div id="betnero_header_simplebar" class="betnero_header__container">
 				<script>
 					var headerElement = document.querySelector('#betnero_header_simplebar');
+					if (window.innerWidth > 992) {
+						headerElement.setAttribute('data-simplebar', '');
+					}
 					window.addEventListener('resize', function() {
 						if (window.innerWidth > 992) {
 							headerElement.setAttribute('data-simplebar', '');
@@ -28,12 +31,18 @@
 				</script>
 
 				<div class="betnero_header__mobile-line">
-					<button type="button" class="betnero_icon-menu"><span></span></button>
-					<a href="" class="betnero_header__logo"><img src="img/logo.svg" alt="logo"></a>
-					<div class="betnero_menu__search">
-						<a href="">
-							<img src="img/icons/search.svg" alt="search">
-						</a>
+					<div class="betnero_header__mobile-row">
+						<button type="button" class="betnero_icon-menu"><span></span></button>
+						<a href="" class="betnero_header__logo"><img src="img/logo.svg" alt="logo"></a>
+						<div class="betnero_menu__search">
+							<a href="search.html">
+								<img src="img/icons/search.svg" alt="search">
+							</a>
+						</div>
+					</div>
+					<div class="betnero_header__buttons">
+						<a href="" class="betnero_header__button-login">LOGIN</a>
+						<a href="" class="betnero_header__button-reg">REGISTRATI</a>
 					</div>
 				</div>
 
@@ -48,7 +57,7 @@
 
 					<nav class="betnero_menu__body">
 						<div class="betnero_menu__search">
-							<a href="">
+							<a href="search.html">
 								<img src="img/icons/search.svg" alt="search">
 								<span>Search</span>
 							</a>
@@ -796,7 +805,7 @@
 
 		</div>
 	</div>
-	<script src="js/app.min.js?_v=20230505005410"></script>
+	<script src="js/app.min.js?_v=20230505033835"></script>
 </body>
 
 </html>
