--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
 		<ul class="rootpage__list">
 			<li><a target="_blank" href="home.html">Home</a></li>
 			<li><a target="_blank" href="home-logged.html">Home logged in</a></li>
+			<li><a target="_blank" href="search.html">Search Page</a></li>
+
 		</ul>
 	</div>
 </body>
