--- a/home-logged.html
+++ b/home-logged.html
@@ -6,8 +6,8 @@
 	<meta charset="UTF-8">
 	<meta name="format-detection" content="telephone=no">
 	<!-- <style>body{opacity: 0;}</style> -->
-	<!-- <link rel="stylesheet" href="css/style.min.css?_v=20230505033835"> -->
-	<link rel="stylesheet" href="css/style.css?_v=20230505033835">
+	<!-- <link rel="stylesheet" href="css/style.min.css?_v=20230505155510"> -->
+	<link rel="stylesheet" href="css/style.css?_v=20230505155510">
 	<meta name="robots" content="noindex, nofollow">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
@@ -32,7 +32,7 @@
 
 				<div class="betnero_header__mobile-line">
 					<button type="button" class="betnero_icon-menu"><span></span></button>
-					<a href="" class="betnero_header__logo"><img src="img/logo.svg" alt="logo"></a>
+					<a href="home.html" class="betnero_header__logo"><img src="img/logo.svg" alt="logo"></a>
 					<div class="betnero_menu__search">
 						<a href="search.html">
 							<img src="img/icons/search.svg" alt="search">
@@ -40,7 +40,7 @@
 					</div>
 				</div>
 
-				<a href="" class="betnero_header__logo betnero_header__logo-pc"><img src="img/logo.svg" alt="logo"></a>
+				<a href="home.html" class="betnero_header__logo betnero_header__logo-pc"><img src="img/logo.svg" alt="logo"></a>
 
 				<div class="betnero_header__buttons betnero_logged-in">
 					<a href="" class="betnero_header__button-login">LOGIN</a>
@@ -310,11 +310,13 @@
 						<div class="betnero_section__text">Su betnero ti aspettano tantissime promozioni per le slot, le
 							scommesse sportive e il casinò live. Registrati per partecipavi!</div>
 
-						<!-- Оболонка слайдера -->
+
+						<!-- Slider wrapper -->
 						<div class="betnero_bonus__slider swiper">
-							<!-- Частина слайдера, що рухається -->
+							<!-- The moving part of the slider -->
 							<div class="betnero_bonus__wrapper swiper-wrapper">
-								<!-- Слайд -->
+
+								<!-- Slide -->
 								<div class="betnero_bonus__slide swiper-slide">
 									<div class="betnero_bonus__card">
 										<div class="betnero_bonus__image">
@@ -328,7 +330,7 @@
 									</div>
 								</div>
 
-								<!-- Слайд -->
+								<!-- Slide -->
 								<div class="betnero_bonus__slide swiper-slide">
 									<div class="betnero_bonus__card">
 										<div class="betnero_bonus__image">
@@ -342,7 +344,7 @@
 									</div>
 								</div>
 
-								<!-- Слайд -->
+								<!-- Slide -->
 								<div class="betnero_bonus__slide swiper-slide">
 									<div class="betnero_bonus__card">
 										<div class="betnero_bonus__image">
@@ -356,7 +358,7 @@
 									</div>
 								</div>
 
-								<!-- Слайд -->
+								<!-- Slide -->
 								<div class="betnero_bonus__slide swiper-slide">
 									<div class="betnero_bonus__card">
 										<div class="betnero_bonus__image">
@@ -370,7 +372,7 @@
 									</div>
 								</div>
 
-								<!-- Слайд -->
+								<!-- Slide -->
 								<div class="betnero_bonus__slide swiper-slide">
 									<div class="betnero_bonus__card">
 										<div class="betnero_bonus__image">
@@ -384,7 +386,49 @@
 									</div>
 								</div>
 
-								<!-- Слайд -->
+								<!-- Slide -->
+								<div class="betnero_bonus__slide swiper-slide">
+									<div class="betnero_bonus__card">
+										<div class="betnero_bonus__image">
+											<img src="img/bonus-card-image.jpg" alt="bonus">
+										</div>
+										<div class="betnero_bonus__title">BONUS
+											SCOMMESSE</div>
+										<div class="betnero_bonus__text">Fino a €10 bonus
+											scommesse & casino.</div>
+										<a href="" class="betnero_bonus__button">SCOPRI DI PIU</a>
+									</div>
+								</div>
+
+								<!-- Slide -->
+								<div class="betnero_bonus__slide swiper-slide">
+									<div class="betnero_bonus__card">
+										<div class="betnero_bonus__image">
+											<img src="img/bonus-card-image.jpg" alt="bonus">
+										</div>
+										<div class="betnero_bonus__title">BONUS
+											SCOMMESSE</div>
+										<div class="betnero_bonus__text">Fino a €10 bonus
+											scommesse & casino.</div>
+										<a href="" class="betnero_bonus__button">SCOPRI DI PIU</a>
+									</div>
+								</div>
+
+								<!-- Slide -->
+								<div class="betnero_bonus__slide swiper-slide">
+									<div class="betnero_bonus__card">
+										<div class="betnero_bonus__image">
+											<img src="img/bonus-card-image.jpg" alt="bonus">
+										</div>
+										<div class="betnero_bonus__title">BONUS
+											SCOMMESSE</div>
+										<div class="betnero_bonus__text">Fino a €10 bonus
+											scommesse & casino.</div>
+										<a href="" class="betnero_bonus__button">SCOPRI DI PIU</a>
+									</div>
+								</div>
+
+								<!-- Slide -->
 								<div class="betnero_bonus__slide swiper-slide">
 									<div class="betnero_bonus__card">
 										<div class="betnero_bonus__image">
@@ -401,11 +445,14 @@
 							</div>
 						</div>
 
+
 						<a href="" class="betnero_button">VEDI TUTTE</a>
 					</div>
 				</div>
 			</section>
 			<!-- End of SECTION BONUS E PROMOZIONE -->
+
+
 
 
 
@@ -799,7 +846,7 @@
 
 		</div>
 	</div>
-	<script src="js/app.min.js?_v=20230505033835"></script>
+	<script src="js/app.min.js?_v=20230505155510"></script>
 </body>
 
 </html>
