--- a/search.html
+++ b/search.html
@@ -6,8 +6,8 @@
 	<meta charset="UTF-8">
 	<meta name="format-detection" content="telephone=no">
 	<!-- <style>body{opacity: 0;}</style> -->
-	<!-- <link rel="stylesheet" href="css/style.min.css?_v=20230505033835"> -->
-	<link rel="stylesheet" href="css/style.css?_v=20230505033835">
+	<!-- <link rel="stylesheet" href="css/style.min.css?_v=20230505155510"> -->
+	<link rel="stylesheet" href="css/style.css?_v=20230505155510">
 	<meta name="robots" content="noindex, nofollow">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
@@ -33,7 +33,7 @@
 				<div class="betnero_header__mobile-line">
 					<div class="betnero_header__mobile-row">
 						<button type="button" class="betnero_icon-menu"><span></span></button>
-						<a href="" class="betnero_header__logo"><img src="img/logo.svg" alt="logo"></a>
+						<a href="home.html" class="betnero_header__logo"><img src="img/logo.svg" alt="logo"></a>
 						<div class="betnero_menu__search">
 							<a href="search.html">
 								<img src="img/icons/search.svg" alt="search">
@@ -46,7 +46,7 @@
 					</div>
 				</div>
 
-				<a href="" class="betnero_header__logo betnero_header__logo-pc"><img src="img/logo.svg" alt="logo"></a>
+				<a href="home.html" class="betnero_header__logo betnero_header__logo-pc"><img src="img/logo.svg" alt="logo"></a>
 
 				<div class="betnero_header__buttons">
 					<a href="" class="betnero_header__button-login">LOGIN</a>
@@ -248,7 +248,7 @@
 
 		</div>
 	</div>
-	<script src="js/app.min.js?_v=20230505033835"></script>
+	<script src="js/app.min.js?_v=20230505155510"></script>
 </body>
 
 </html>
