--- a/search-results.html
+++ b/search-results.html
@@ -2,12 +2,12 @@
 <html lang="it">
 
 <head>
-	<title>HomePage</title>
+	<title>Search Page with results</title>
 	<meta charset="UTF-8">
 	<meta name="format-detection" content="telephone=no">
 	<!-- <style>body{opacity: 0;}</style> -->
-	<!-- <link rel="stylesheet" href="css/style.min.css?_v=20230505184756"> -->
-	<link rel="stylesheet" href="css/style.css?_v=20230505184756">
+	<!-- <link rel="stylesheet" href="css/style.min.css?_v=20230506200815"> -->
+	<link rel="stylesheet" href="css/style.css?_v=20230506200815">
 	<meta name="robots" content="noindex, nofollow">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
@@ -174,7 +174,7 @@
 				<div class="betnero_search-page__container">
 					<form name="betnero_search_form" class="betnero_search-page-form" action="#" method="post">
 						<button type="submit" id="betnero_search_submit"></button>
-						<input autocomplete="off" type="text" name="betnero_search-input" placeholder="Cerca" id="bbetnero_search_input" class="input betnero_input">
+						<input autocomplete="off" type="text" name="betnero_search-input" placeholder="Cerca" id="betnero_search_input" class="input betnero_input">
 						<button type="reset" id="betnero_search_reset"></button>
 					</form>
 				</div>
@@ -629,7 +629,7 @@
 
 		</div>
 	</div>
-	<script src="js/app.min.js?_v=20230505184756"></script>
+	<script src="js/app.min.js?_v=20230506200815"></script>
 </body>
 
 </html>
