--- a/casino.html
+++ b/casino.html
@@ -2,7 +2,7 @@
 <html lang="it">
 
 <head>
-	<title>Search Page</title>
+	<title>Casino</title>
 	<meta charset="UTF-8">
 	<meta name="format-detection" content="telephone=no">
 	<!-- <style>body{opacity: 0;}</style> -->
@@ -169,17 +169,222 @@
 
 
 
-			<!-- SECTION SEARCH -->
-			<div class="betnero_search-page">
-				<div class="betnero_search-page__container">
-					<form name="betnero_search_form" class="betnero_search-page-form" action="#" method="post">
-						<button type="submit" id="betnero_search_submit"></button>
-						<input autocomplete="off" type="text" name="betnero_search-input" placeholder="Cerca" id="betnero_search_input" class="input betnero_input">
-						<button type="reset" id="betnero_search_reset"></button>
-					</form>
+			<!-- SECTION top-line -->
+			<div class="betnero_top-line">
+				<div class="betnero_top-line__container">
+					<img src="img/banners/eighteen.svg" alt="18">
+					<span class="betnero_top-line__text">Il gioco è vietato ai minori di anni 18. Giocare troppo può causare
+						dipendenza patologica.Probabilità di vincita</span>
+					<img src="img/banners/ezgif.svg" alt="ADM">
 				</div>
 			</div>
-			<!-- End of SECTION SEARCH -->
+			<!-- End of SECTION top-line -->
+
+
+
+
+
+			<!-- SECTION promotions -->
+			<section class="betnero_promotions betnero_promotions-small">
+				<div class="betnero_promotions__container betnero_bg-color-1">
+					<!-- SLider wrapper -->
+					<div class="betnero_promotions__slider swiper">
+						<!-- The moving part of the slider -->
+						<div class="betnero_promotions__wrapper swiper-wrapper">
+							<!-- Slide -->
+							<div class="betnero_promotions__slide swiper-slide">
+								<div class="betnero_promotions__row">
+									<div class="betnero_promotions__col-left">
+										<div class="betnero_promotions__image">
+											<img src="img/coins.png" alt="coins">
+										</div>
+									</div>
+									<div class="betnero_promotions__col-right">
+										<div class="betnero_promotions__content">
+											<h2 class="betnero_promotions__title">
+												FINO A €1300 + €10 GRATIS
+											</h2>
+											<a href="" class="betnero_promotions__button-registrati">REGISTRATI</a>
+										</div>
+									</div>
+								</div>
+							</div>
+
+							<!-- Slide -->
+							<div class="betnero_promotions__slide swiper-slide">
+								<div class="betnero_promotions__row">
+									<div class="betnero_promotions__col-left">
+										<div class="betnero_promotions__image">
+											<img src="img/coins.png" alt="coins">
+										</div>
+									</div>
+									<div class="betnero_promotions__col-right">
+										<div class="betnero_promotions__content">
+											<h2 class="betnero_promotions__title">
+												FINO A €1300 + €10 GRATIS
+											</h2>
+											<a href="" class="betnero_promotions__button-registrati">REGISTRATI</a>
+										</div>
+									</div>
+								</div>
+							</div>
+
+						</div>
+						<!-- If you need buttons for navigation (left/right) -->
+						<button type="button" class="swiper-button-prev">
+							<img src="img/icons/arrow-white-left.svg" alt="left">
+						</button>
+						<button type="button" class="swiper-button-next">
+							<img src="img/icons/arrow-white-right.svg" alt="right">
+						</button>
+					</div>
+				</div>
+			</section>
+			<!-- End of SECTION promotions -->
+
+
+
+
+
+			<!-- SECTION TOP DESCRIPTION -->
+			<section class="betnero_top-description">
+				<div class="betnero_top-description__container betnero_bg-color-2">
+					<h3 class="betnero_top-description__title">Miglior Casino Online: L'Offerta Giochi del Casino di Betnero
+					</h3>
+					<div class="betnero_top-description__text">
+						<p><span class="betnero_stars">&#9733;&#9733;&#9733;&#9733;&#9733;</span> Fino a <span class="betnero_yellow">1.300€</span> di Bonus sui Giochi del Casinò e le Slot Machine <img src="img/icons/check.svg" alt="check"> BetNero è il TOP Casino Online Sicuro per eccellenza
+							<img class="betnero_present" src="img/icons/present.png" alt="present"> e il Primo con un Bonus di
+							Benvenuto cosi alto!
+						</p>
+						<div data-showmore class="betnero_show-more">
+							<div data-showmore-content="0" class="betnero_show-more__content">
+								<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere, modi?</p>
+								<p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ad culpa quibusdam qui, rerum
+									officiis consectetur placeat eius corrupti doloribus libero.</p>
+							</div>
+							<button hidden data-showmore-button type="button" class="betnero_show-more__more"><span>Mostra
+									tutto <img src="img/icons/show-more.svg" alt="more"></span><span>Mostra meno<img src="img/icons/show-less.svg" alt="less"></span></button>
+						</div>
+					</div>
+				</div>
+			</section>
+			<!-- End of SECTION TOP DESCRIPTION -->
+
+
+
+
+			<!-- SECTION GAMES -->
+			<section class="betnero_games">
+				<div class="betnero_games__container betnero_bg-color-1">
+					<!-- breadcrumbs -->
+					<div class="betnero_breadcrumbs">
+						<div class="betnero_breadcrumbs__item">
+							<a href="">Home</a>
+						</div>
+						<div class="betnero_breadcrumbs__item">
+							<a href="">Casino</a>
+						</div>
+						<div class="betnero_breadcrumbs__item">
+							Più popolari
+						</div>
+					</div>
+					<!-- end of breadcrumbs -->
+
+					<!-- TOP LINE -->
+					<div class="betnero_games__top-line">
+
+						<!-- tabs -->
+						<div class="betnero_games__tabs">
+							<!-- Slider wrapper -->
+							<div class="betnero_tabs__slider swiper">
+								<!-- The moving part of the slider -->
+								<div class="betnero_tabs__wrapper swiper-wrapper">
+									<!-- Slide -->
+									<div class="betnero_tabs__slide swiper-slide">
+										<div class="betnero_games__tab betnero_games__tab-active">
+											<span>Più popolari</span>
+										</div>
+									</div>
+									<!-- Slide -->
+									<div class="betnero_tabs__slide swiper-slide">
+										<div class="betnero_games__tab">
+											<a href="" class="betnero_games__tab-link">
+												<span>Slot Machine</span>
+											</a>
+										</div>
+									</div>
+									<!-- Slide -->
+									<div class="betnero_tabs__slide swiper-slide">
+										<div class="betnero_games__tab">
+											<a href="" class="betnero_games__tab-link">
+												<span>Slot Megways</span>
+											</a>
+										</div>
+									</div>
+									<!-- Slide -->
+									<div class="betnero_tabs__slide swiper-slide">
+										<div class="betnero_games__tab">
+											<a href="" class="betnero_games__tab-link">
+												<span>Roulette Online</span>
+											</a>
+										</div>
+									</div>
+									<!-- Slide -->
+									<div class="betnero_tabs__slide swiper-slide">
+										<div class="betnero_games__tab">
+											<a href="" class="betnero_games__tab-link">
+												<span>Blackjack Online</span>
+											</a>
+										</div>
+									</div>
+									<!-- Slide -->
+									<div class="betnero_tabs__slide swiper-slide">
+										<div class="betnero_games__tab">
+											<a href="" class="betnero_games__tab-link">
+												<span>Slot Machine</span>
+											</a>
+										</div>
+									</div>
+								</div>
+								<!-- buttons for navigation (left/right) -->
+								<button type="button" class="betnero_tabs-button-prev">
+									<img src="img/icons/arrow-white-left.svg" alt="left">
+								</button>
+								<button type="button" class="betnero_tabs-button-next">
+									<img src="img/icons/arrow-white-right.svg" alt="right">
+								</button>
+							</div>
+							<!-- end of Slider wrapper -->
+						</div>
+						<!-- end of tabs -->
+
+						<!-- search -->
+						<form name="betnero_search_form" class="betnero_search-page-form" action="#" method="post">
+							<button type="submit" id="betnero_search_submit"></button>
+							<input autocomplete="off" type="text" name="betnero_search-input" placeholder="Cerca" id="betnero_search_input" class="input betnero_input">
+							<button type="reset" id="betnero_search_reset"></button>
+						</form>
+						<!-- end of search -->
+
+					</div>
+					<!-- end of TOP LINE -->
+
+				</div>
+			</section>
+			<!-- End of SECTION GAMES -->
+
+
+
+
+			<!-- SECTION NUOVE -->
+			<section class="betnero_section betnero_nuove">
+				<div class="betnero_section__container betnero_bg-color-2">
+
+				</div>
+			</section>
+			<!-- End of SECTION NUOVE -->
+
+
 
 
 
