--- a/home-logged.html
+++ b/home-logged.html
@@ -6,15 +6,15 @@
 	<meta charset="UTF-8">
 	<meta name="format-detection" content="telephone=no">
 	<!-- <style>body{opacity: 0;}</style> -->
-	<!-- <link rel="stylesheet" href="css/style.min.css?_v=20230505184756"> -->
-	<link rel="stylesheet" href="css/style.css?_v=20230505184756">
+	<!-- <link rel="stylesheet" href="css/style.min.css?_v=20230506200815"> -->
+	<link rel="stylesheet" href="css/style.css?_v=20230506200815">
 	<meta name="robots" content="noindex, nofollow">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 
 <body>
 	<div class="betnero_wrapper">
-		<header class="betnero_header">
+		<header class="betnero_header betnero_logged-in">
 			<div id="betnero_header_simplebar" class="betnero_header__container">
 				<script>
 					var headerElement = document.querySelector('#betnero_header_simplebar');
@@ -31,18 +31,24 @@
 				</script>
 
 				<div class="betnero_header__mobile-line">
-					<button type="button" class="betnero_icon-menu"><span></span></button>
-					<a href="home.html" class="betnero_header__logo"><img src="img/logo.svg" alt="logo"></a>
-					<div class="betnero_menu__search">
-						<a href="search.html">
-							<img src="img/icons/search.svg" alt="search">
-						</a>
+					<div class="betnero_header__mobile-row">
+						<button type="button" class="betnero_icon-menu"><span></span></button>
+						<a href="home.html" class="betnero_header__logo"><img src="img/logo.svg" alt="logo"></a>
+						<div class="betnero_menu__search">
+							<a href="search.html">
+								<img src="img/icons/search.svg" alt="search">
+							</a>
+						</div>
+					</div>
+					<div class="betnero_header__buttons">
+						<a href="" class="betnero_header__button-login">LOGIN</a>
+						<a href="" class="betnero_header__button-reg">REGISTRATI</a>
 					</div>
 				</div>
 
 				<a href="home.html" class="betnero_header__logo betnero_header__logo-pc"><img src="img/logo.svg" alt="logo"></a>
 
-				<div class="betnero_header__buttons betnero_logged-in">
+				<div class="betnero_header__buttons">
 					<a href="" class="betnero_header__button-login">LOGIN</a>
 					<a href="" class="betnero_header__button-reg">REGISTRATI</a>
 				</div>
@@ -846,7 +852,7 @@
 
 		</div>
 	</div>
-	<script src="js/app.min.js?_v=20230505184756"></script>
+	<script src="js/app.min.js?_v=20230506200815"></script>
 </body>
 
 </html>
