--- a/search.html
+++ b/search.html
@@ -6,8 +6,8 @@
 	<meta charset="UTF-8">
 	<meta name="format-detection" content="telephone=no">
 	<!-- <style>body{opacity: 0;}</style> -->
-	<!-- <link rel="stylesheet" href="css/style.min.css?_v=20230507083354"> -->
-	<link rel="stylesheet" href="css/style.css?_v=20230507083354">
+	<!-- <link rel="stylesheet" href="css/style.min.css?_v=20230507105340"> -->
+	<link rel="stylesheet" href="css/style.css?_v=20230507105340">
 	<meta name="robots" content="noindex, nofollow">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
@@ -140,14 +140,14 @@
 						<a href="" class="betnero_menu__link"><img src="img/icons/subscriptions.svg" alt="button">BLOG</a>
 
 						<div class="betnero_header__logo-mobile">
-							<img src="img/logo-mobile.svg" alt="logo">
+							<a href="home.html"><img src="img/logo-mobile.svg" alt="logo"></a>
 						</div>
 
 					</nav>
 				</div>
 
 				<a href="" class="betnero_header__button-chat">
-					<img src="img/icons/chat.svg" alt="">
+					<img src="img/icons/chat.svg" alt="chat">
 				</a>
 			</div>
 		</header>
@@ -233,7 +233,7 @@
 
 		</div>
 	</div>
-	<script src="js/app.min.js?_v=20230507083354"></script>
+	<script src="js/app.min.js?_v=20230507105340"></script>
 </body>
 
 </html>
