--- a/casino.html
+++ b/casino.html
@@ -6,8 +6,8 @@
 	<meta charset="UTF-8">
 	<meta name="format-detection" content="telephone=no">
 	<!-- <style>body{opacity: 0;}</style> -->
-	<!-- <link rel="stylesheet" href="css/style.min.css?_v=20230507105340"> -->
-	<link rel="stylesheet" href="css/style.css?_v=20230507105340">
+	<!-- <link rel="stylesheet" href="css/style.min.css?_v=20230507171406"> -->
+	<link rel="stylesheet" href="css/style.css?_v=20230507171406">
 	<meta name="robots" content="noindex, nofollow">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
@@ -208,7 +208,7 @@
 									<div class="betnero_promotions__col-right">
 										<div class="betnero_promotions__content">
 											<h2 class="betnero_promotions__title">
-												FINO A €1300 + €10 GRATIS
+												SU BETNERO TI ASPETTANOPIU' DI 30 GIOCHIDEL CASINO LIVE
 											</h2>
 											<a href="" class="betnero_promotions__button-registrati">REGISTRATI</a>
 										</div>
@@ -358,6 +358,7 @@
 
 					</div>
 					<!-- end of TOP LINE -->
+
 
 					<!-- ROW WITH SMALL THUMBS -->
 					<div class="betnero_games__row betnero_small-thumbs">
@@ -1099,7 +1100,7 @@
 							online invece che in un casinò terrestre. Vediamo insieme quali sono i tre bonus più popolari e,
 							soprattutto, i migliori tipi di bonus di casinò per divertirti con i giochi più popolari qui su
 							BetNero:</p>
-						<p><img src="img/icons/double-arrow.png" alt="arrow"> <a href="https://www.betnero.it/promozioni/casino-bonus-senza-deposito.html">Il bonus di casinò
+						<p><img src="img/icons/double-arrow.png" alt="arrow">Il <a href="https://www.betnero.it/promozioni/casino-bonus-senza-deposito.html">bonus di casinò
 								senza deposito</a> è probabilmente il più ricercato, perché per ottenerlo ti sarà sufficiente
 							registrarti, divertendoti subito con i giochi del casino online in modo completamente gratuito.
 							BetNero, ad esempio, ti offre 10 € di credito da spendere alle slot senza dover effettuare alcun
@@ -1217,7 +1218,7 @@
 
 		</div>
 	</div>
-	<script src="js/app.min.js?_v=20230507105340"></script>
+	<script src="js/app.min.js?_v=20230507171406"></script>
 </body>
 
 </html>
