--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 			<li><a target="_blank" href="home.html">Home</a></li>
 			<li><a target="_blank" href="home-logged.html">Home logged in</a></li>
 			<li><a target="_blank" href="casino.html">Casino</a></li>
+			<li><a target="_blank" href="casino-subcategory.html">Casino / Subcategory</a></li>
 			<li><a target="_blank" href="search.html">Search Page</a></li>
 			<li><a target="_blank" href="search-results.html">Search page with results</a></li>
 
