--- a/casino-subcategory.html
+++ b/casino-subcategory.html
@@ -2,7 +2,7 @@
 <html lang="it">
 
 <head>
-	<title>Search Page with results</title>
+	<title>Casino</title>
 	<meta charset="UTF-8">
 	<meta name="format-detection" content="telephone=no">
 	<!-- <style>body{opacity: 0;}</style> -->
@@ -156,26 +156,292 @@
 
 
 
-			<!-- SECTION SEARCH -->
-			<div class="betnero_search-page">
-				<div class="betnero_search-page__container">
-					<form name="betnero_search_form" class="betnero_search-page-form" action="#" method="post">
-						<button type="submit" id="betnero_search_submit"></button>
-						<input autocomplete="off" type="text" name="betnero_search-input" placeholder="Cerca" id="betnero_search_input" class="input betnero_input">
-						<button type="reset" id="betnero_search_reset"></button>
-					</form>
+			<!-- SECTION top-line -->
+			<div class="betnero_top-line">
+				<div class="betnero_top-line__container">
+					<img src="img/banners/eighteen.svg" alt="18">
+					<span class="betnero_top-line__text">Il gioco è vietato ai minori di anni 18. Giocare troppo può causare
+						dipendenza patologica.Probabilità di vincita</span>
+					<img src="img/banners/ezgif.svg" alt="ADM">
 				</div>
 			</div>
-			<!-- End of SECTION SEARCH -->
+			<!-- End of SECTION top-line -->
 
 
 
-			<!-- BLOCK SEARCHING RESULTS -->
-			<div class="betnero_searching-results">
-				<h2 class="betnero_searching-results__title">
-				</h2>
-				<div class="betnero_searching-results__container">
-					<div class="betnero_searching-results__items">
+
+
+			<!-- SECTION promotions -->
+			<section class="betnero_promotions betnero_promotions-small">
+				<div class="betnero_promotions__container betnero_bg-color-1">
+					<!-- SLider wrapper -->
+					<div class="betnero_promotions__slider swiper">
+						<!-- The moving part of the slider -->
+						<div class="betnero_promotions__wrapper swiper-wrapper">
+							<!-- Slide -->
+							<div class="betnero_promotions__slide swiper-slide">
+								<div class="betnero_promotions__row">
+									<div class="betnero_promotions__col-left">
+										<div class="betnero_promotions__image">
+											<img src="img/coins.png" alt="coins">
+										</div>
+									</div>
+									<div class="betnero_promotions__col-right">
+										<div class="betnero_promotions__content">
+											<h2 class="betnero_promotions__title">
+												FINO A €1300 + €10 GRATIS
+											</h2>
+											<a href="" class="betnero_promotions__button-registrati">REGISTRATI</a>
+										</div>
+									</div>
+								</div>
+							</div>
+
+							<!-- Slide -->
+							<div class="betnero_promotions__slide swiper-slide">
+								<div class="betnero_promotions__row">
+									<div class="betnero_promotions__col-left">
+										<div class="betnero_promotions__image">
+											<img src="img/coins.png" alt="coins">
+										</div>
+									</div>
+									<div class="betnero_promotions__col-right">
+										<div class="betnero_promotions__content">
+											<h2 class="betnero_promotions__title">
+												SU BETNERO TI ASPETTANOPIU' DI 30 GIOCHIDEL CASINO LIVE
+											</h2>
+											<a href="" class="betnero_promotions__button-registrati">REGISTRATI</a>
+										</div>
+									</div>
+								</div>
+							</div>
+
+						</div>
+						<!-- If you need buttons for navigation (left/right) -->
+						<button type="button" class="swiper-button-prev">
+							<img src="img/icons/arrow-white-left.svg" alt="left">
+						</button>
+						<button type="button" class="swiper-button-next">
+							<img src="img/icons/arrow-white-right.svg" alt="right">
+						</button>
+					</div>
+				</div>
+			</section>
+			<!-- End of SECTION promotions -->
+
+
+
+
+
+			<!-- SECTION TOP DESCRIPTION -->
+			<section class="betnero_top-description">
+				<div class="betnero_top-description__container betnero_bg-color-2">
+					<h3 class="betnero_top-description__title">
+						Slot Machine Online AAMS - Fino a 1.300€ di Bonus
+					</h3>
+					<div class="betnero_top-description__text">
+						<p><span class="betnero_stars">&#9733;&#9733;&#9733;&#9733;&#9733;</span> Le Migliori Slot Machine
+							Online <img src="img/icons/double-arrow.png" alt="arrows"> Super Bonus fino a €1.300 Il più
+							elevato in assoluto in Italia! La Slot Gallina 🦃 in Esclusiva <img src="img/icons/check.svg" alt="check"> Solo Slot AAMS. Perché giocare alle Slot su BetNero? Ecco alcuni validi motivi:</p>
+						<!-- SHOW MORE BLOCK -->
+						<div data-showmore class="betnero_show-more">
+							<div data-showmore-content="0" class="betnero_show-more__content">
+								<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere, modi?</p>
+								<p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ad culpa quibusdam qui, rerum
+									officiis consectetur placeat eius corrupti doloribus libero.</p>
+							</div>
+							<button hidden data-showmore-button type="button" class="betnero_show-more__more"><span>Mostra
+									tutto <img src="img/icons/show-more.svg" alt="more"></span><span>Mostra meno<img src="img/icons/show-less.svg" alt="less"></span></button>
+						</div>
+						<!-- end of SHOW MORE BLOCK -->
+					</div>
+				</div>
+			</section>
+			<!-- End of SECTION TOP DESCRIPTION -->
+
+
+
+
+			<!-- SECTION GAMES -->
+			<section class="betnero_games">
+				<div class="betnero_games__container betnero_bg-color-1">
+
+					<!-- breadcrumbs -->
+					<div class="betnero_breadcrumbs">
+						<div class="betnero_breadcrumbs__item">
+							<a href="">Home</a>
+						</div>
+						<div class="betnero_breadcrumbs__item">
+							<a href="">Casino</a>
+						</div>
+						<div class="betnero_breadcrumbs__item">
+							Più popolari
+						</div>
+					</div>
+					<!-- end of breadcrumbs -->
+
+					<!-- TOP LINE -->
+					<div class="betnero_games__top-line">
+
+						<!-- tabs -->
+						<div class="betnero_games__tabs">
+							<!-- Slider wrapper -->
+							<div class="betnero_tabs__slider swiper">
+								<!-- The moving part of the slider -->
+								<div class="betnero_tabs__wrapper swiper-wrapper">
+									<!-- Slide -->
+									<div class="betnero_tabs__slide swiper-slide">
+										<div class="betnero_games__tab betnero_games__tab-active">
+											<span>Più popolari</span>
+										</div>
+									</div>
+									<!-- Slide -->
+									<div class="betnero_tabs__slide swiper-slide">
+										<div class="betnero_games__tab">
+											<a href="" class="betnero_games__tab-link">
+												<span>Slot Machine</span>
+											</a>
+										</div>
+									</div>
+									<!-- Slide -->
+									<div class="betnero_tabs__slide swiper-slide">
+										<div class="betnero_games__tab">
+											<a href="" class="betnero_games__tab-link">
+												<span>Slot Megways</span>
+											</a>
+										</div>
+									</div>
+									<!-- Slide -->
+									<div class="betnero_tabs__slide swiper-slide">
+										<div class="betnero_games__tab">
+											<a href="" class="betnero_games__tab-link">
+												<span>Roulette Online</span>
+											</a>
+										</div>
+									</div>
+									<!-- Slide -->
+									<div class="betnero_tabs__slide swiper-slide">
+										<div class="betnero_games__tab">
+											<a href="" class="betnero_games__tab-link">
+												<span>Blackjack Online</span>
+											</a>
+										</div>
+									</div>
+									<!-- Slide -->
+									<div class="betnero_tabs__slide swiper-slide">
+										<div class="betnero_games__tab">
+											<a href="" class="betnero_games__tab-link">
+												<span>Slot Machine</span>
+											</a>
+										</div>
+									</div>
+								</div>
+								<!-- buttons for navigation (left/right) -->
+								<button type="button" class="betnero_tabs-button-prev">
+									<img src="img/icons/arrow-white-left.svg" alt="left">
+								</button>
+								<button type="button" class="betnero_tabs-button-next">
+									<img src="img/icons/arrow-white-right.svg" alt="right">
+								</button>
+							</div>
+							<!-- end of Slider wrapper -->
+						</div>
+						<!-- end of tabs -->
+
+						<!-- search -->
+						<div class="betnero_filters-wrapper">
+							<form name="betnero_search_form" class="betnero_search-page-form" action="#" method="post">
+								<button type="submit" id="betnero_search_submit"></button>
+								<input autocomplete="off" type="text" name="betnero_search-input" placeholder="Cerca" id="betnero_search_input" class="input betnero_input">
+								<button type="reset" id="betnero_search_reset"></button>
+							</form>
+
+							<button class="betnero_filters-button">
+								<img src="img/icons/filters.svg" alt="filters">
+							</button>
+						</div>
+						<!-- end of search -->
+
+					</div>
+					<!-- end of TOP LINE -->
+
+
+					<!-- FILTERS -->
+					<div class="betnero_games__filters">
+						<div class="betnero_games__filters__row">
+							<div class="betnero_games__filters__col">
+								<div class="betnero_games__filters__wrapper">
+									<div class="betnero_label-mobile">
+										<span>Filtrare i giochi</span>
+										<img class="betnero_filters_close" src="img/icons/close.svg" alt="close">
+									</div>
+
+									<div class="betnero_games__filters__item">
+										<select data-show-selected data-show name="filter-1" data-class-modif="form">
+											<option value="1" selected>Scegli il fornitore</option>
+											<option value="2">Mostra tutti</option>
+											<option value="3">Evolution</option>
+											<option value="4">Pragmatic</option>
+										</select>
+									</div>
+									<div class="betnero_games__filters__item">
+										<select data-show-selected name="filter-2" data-class-modif="form">
+											<option value="1" selected>Scegli il tema</option>
+											<option value="2">Mostra tutti</option>
+											<option value="3">Evolution</option>
+											<option value="4">Pragmatic</option>
+										</select>
+									</div>
+									<div class="betnero_games__filters__item">
+										<select data-show-selected name="filter-3" data-class-modif="form">
+											<option value="1" selected>linee di pagamento</option>
+											<option value="2">Mostra tutti</option>
+											<option value="3">Evolution</option>
+											<option value="4">Pragmatic</option>
+										</select>
+									</div>
+								</div>
+							</div>
+							<div class="betnero_games__filters__col">
+								<div class="betnero_games__filters__wrapper">
+									<div class="betnero_games__filters__item">
+										<div class="betnero_games__filters__item-row">
+											<div class="betnero_games__filters__item-label">
+												Ordina Per
+											</div>
+											<div class="betnero_games__filters__item-content">
+												<select data-show-selected name="filter-4" data-class-modif="form">
+													<option value="1" selected>Consigliati</option>
+													<option value="2">item 2</option>
+													<option value="3">item 3</option>
+												</select>
+											</div>
+										</div>
+									</div>
+									<div class="betnero_games__filters__item">
+										<div class="betnero_games__filters__item-row">
+											<div class="betnero_games__filters__item-label">
+												Visualizza per
+											</div>
+											<div class="betnero_games__filters__item-content">
+												<select data-show-selected name="filter-5" data-class-modif="form">
+													<option value="6" selected>6</option>
+													<option value="12">12</option>
+													<option value="18">18</option>
+												</select>
+											</div>
+										</div>
+									</div>
+								</div>
+							</div>
+							<button class="betnero_games__filters-button">Filtrare</button>
+						</div>
+					</div>
+					<!-- end of FILTERS -->
+
+
+					<!-- BLOCK ITEMS -->
+					<div class="betnero_searching-results__items betnero_subcategories">
 						<div class="betnero_searching-results__item">
 							<a href="" class="betnero_searching-results__item-content">
 								<img src="img/thumbs/thumb-1.jpg" alt="thumb">
@@ -497,55 +763,103 @@
 							</a>
 						</div>
 					</div>
+					<!-- End of BLOCK ITEMS -->
+
 				</div>
-			</div>
-			<!-- End of BLOCK SEARCHING RESULTS -->
+			</section>
+			<!-- End of SECTION GAMES -->
 
 
 
 
 
+			<!-- SECTION INFO BLOCK -->
+			<section class="betnero_info-block">
+				<div class="betnero_info-block__container betnero_bg-color-2">
+					<!-- TEXT-BLOCK -->
+					<div class="betnero_info-block__text-block">
+						<h3 class="betnero_info-block__text-block_title">Su Betnero le Slot Machine più Popolari</h3>
+						<p>Come ti sarà facile immaginare, le differenze tra i casinò terrestri e i casinò online sono
+							notevoli.</p>
+						<p>L'ebbrezza del gioco in un vero casinò, infatti, non può che essere indubbiamente più immersiva
+							sotto aspetti sensoriali che sono difficili da eguagliare: questo è uno dei motivi per cui i casinò
+							online sono in continua evoluzione per offrire un'esperienza sempre più coinvolgente.</p>
+						<p>In Italia, inoltre, i casinò terrestri legali attualmente attivi sono soltanto 5, e tutti nel Nord
+							Italia - due a Venezia, uno a Sanremo, un altro a Saint Vincent, per finire con il Casinò di
+							Campione d'Italia, riaperto di recente, che appartiene alla provincia di Como ma è situato in
+							Svizzera - pertanto non sono facilmente raggiungibili da tutti coloro che desiderano un’esperienza
+							di gioco dal vivo.</p>
+						<!-- SHOW MORE BLOCK -->
+						<div data-showmore class="betnero_show-more">
+							<div data-showmore-content="0" class="betnero_show-more__content">
+								<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere, modi?</p>
+								<p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ad culpa quibusdam qui, rerum
+									officiis consectetur placeat eius corrupti doloribus libero.</p>
+							</div>
+							<button hidden data-showmore-button type="button" class="betnero_show-more__more"><span>Mostra
+									tutto <img src="img/icons/show-more.svg" alt="more"></span><span>Mostra meno<img src="img/icons/show-less.svg" alt="less"></span></button>
+						</div>
+						<!-- end of SHOW MORE BLOCK -->
+					</div>
+					<!-- end of TEXT-BLOCK -->
 
+					<!-- TEXT-BLOCK -->
+					<div class="betnero_info-block__text-block">
+						<h3 class="betnero_info-block__text-block_title">Casino Online: i Migliori Bonus</h3>
+						<p>BetNero offre ai giocatori una serie di favolosi casino bonus: scopriamo insieme cosa sono e come
+							ottenerli!</p>
+						<p>I bonus del casinò sono uno dei principali vantaggi che avrai a disposizione giocando in un casino
+							online invece che in un casinò terrestre. Vediamo insieme quali sono i tre bonus più popolari e,
+							soprattutto, i migliori tipi di bonus di casinò per divertirti con i giochi più popolari qui su
+							BetNero:</p>
+						<p><img src="img/icons/double-arrow.png" alt="arrow">Il <a href="https://www.betnero.it/promozioni/casino-bonus-senza-deposito.html">bonus di casinò
+								senza deposito</a> è probabilmente il più ricercato, perché per ottenerlo ti sarà sufficiente
+							registrarti, divertendoti subito con i giochi del casino online in modo completamente gratuito.
+							BetNero, ad esempio, ti offre 10 € di credito da spendere alle slot senza dover effettuare alcun
+							deposito, semplicemente inviando il tuo documento d'identità.</p>
+						<!-- SHOW MORE BLOCK -->
+						<div data-showmore class="betnero_show-more">
+							<div data-showmore-content="0" class="betnero_show-more__content">
+								<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere, modi?</p>
+								<p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ad culpa quibusdam qui, rerum
+									officiis consectetur placeat eius corrupti doloribus libero.</p>
+							</div>
+							<button hidden data-showmore-button type="button" class="betnero_show-more__more"><span>Mostra
+									tutto <img src="img/icons/show-more.svg" alt="more"></span><span>Mostra meno<img src="img/icons/show-less.svg" alt="less"></span></button>
+						</div>
+						<!-- end of SHOW MORE BLOCK -->
+					</div>
+					<!-- end of TEXT-BLOCK -->
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+					<!-- TEXT-BLOCK -->
+					<div class="betnero_info-block__text-block">
+						<h3 class="betnero_info-block__text-block_title">Domande Frequenti sui Casino Online</h3>
+						<p>Passiamo ora a vedere insieme quali sono le domande che vengono poste più di frequente dai
+							giocatori sui casinò online e su come funzionano. Se non trovi una risposta alla domanda che stavi
+							cercando non esitare a contattarci: trovi il nostro numero di telefono, un apposito indirizzo
+							e-mail e un pratico form da compilare in fondo alla pagina, nella sezione Aiuto e Supporto.</p>
+						<h4 class="betnero_info-block__text-block_sub-title"><img src="img/icons/info.png" alt="info"> Come
+							posso aprire un conto in un casinò online?</h4>
+						<p>È davvero facilissimo aprire un conto di gioco su BetNero, basta solo che tu sia maggiorenne.
+							Cliccando su Registrati in alto a destra dovrai compilare un modulo con i tuoi dati e in soli 5
+							minuti sarai già pronto a giocare con soldi veri - usufruendo, se vorrai, anche del bonus di
+							benvenuto offerto da BetNero.</p>
+						<!-- SHOW MORE BLOCK -->
+						<div data-showmore class="betnero_show-more">
+							<div data-showmore-content="0" class="betnero_show-more__content">
+								<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere, modi?</p>
+								<p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ad culpa quibusdam qui, rerum
+									officiis consectetur placeat eius corrupti doloribus libero.</p>
+							</div>
+							<button hidden data-showmore-button type="button" class="betnero_show-more__more"><span>Mostra
+									tutto <img src="img/icons/show-more.svg" alt="more"></span><span>Mostra meno<img src="img/icons/show-less.svg" alt="less"></span></button>
+						</div>
+						<!-- end of SHOW MORE BLOCK -->
+					</div>
+					<!-- end of TEXT-BLOCK -->
+				</div>
+			</section>
+			<!-- End of SECTION INFO BLOCK -->
 
 
 
